refactor: ajustes consultas